--- a/roles/ceph-config/tasks/main.yml
+++ b/roles/ceph-config/tasks/main.yml
@@ -120,4 +120,5 @@
     - restart ceph rgws
     - restart ceph mgrs
     - restart ceph rbdmirrors
+    - restart ceph cephfsmirrors
     - restart ceph rbd-target-api-gw
