--- a/roles/ceph-infra/tasks/main.yml
+++ b/roles/ceph-infra/tasks/main.yml
@@ -34,6 +34,7 @@
       inventory_hostname in groups.get(rgw_group_name, []) or
       inventory_hostname in groups.get(mgr_group_name, []) or
       inventory_hostname in groups.get(rbdmirror_group_name, []) or
+      inventory_hostname in groups.get(cephfsmirror_group_name, []) or
       inventory_hostname in groups.get(iscsi_gw_group_name, [])
 
 - name: add logrotate configuration
@@ -51,4 +52,5 @@
       inventory_hostname in groups.get(rgw_group_name, []) or
       inventory_hostname in groups.get(mgr_group_name, []) or
       inventory_hostname in groups.get(rbdmirror_group_name, []) or
+      inventory_hostname in groups.get(cephfsmirror_group_name, []) or
       inventory_hostname in groups.get(iscsi_gw_group_name, [])
