--- a/group_vars/rhcs.yml.sample
+++ b/group_vars/rhcs.yml.sample
@@ -51,6 +51,7 @@ dummy:
 #mds_group_name: mdss
 #nfs_group_name: nfss
 #rbdmirror_group_name: rbdmirrors
+#cephfsmirror_group_name: cephfsmirrors
 #client_group_name: clients
 #iscsi_gw_group_name: iscsigws
 #mgr_group_name: mgrs
@@ -70,6 +71,7 @@ dummy:
 #ceph_mds_firewall_zone: public
 #ceph_nfs_firewall_zone: public
 #ceph_rbdmirror_firewall_zone: public
+#ceph_cephfsmirror_firewall_zone: public
 #ceph_iscsi_firewall_zone: public
 #ceph_dashboard_firewall_zone: public
 #ceph_rgwloadbalancer_firewall_zone: public
