--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -43,6 +43,7 @@ rgw_group_name: rgws
 mds_group_name: mdss
 nfs_group_name: nfss
 rbdmirror_group_name: rbdmirrors
+cephfsmirror_group_name: cephfsmirrors
 client_group_name: clients
 iscsi_gw_group_name: iscsigws
 mgr_group_name: mgrs
@@ -62,6 +63,7 @@ ceph_rgw_firewall_zone: public
 ceph_mds_firewall_zone: public
 ceph_nfs_firewall_zone: public
 ceph_rbdmirror_firewall_zone: public
+ceph_cephfsmirror_firewall_zone: public
 ceph_iscsi_firewall_zone: public
 ceph_dashboard_firewall_zone: public
 ceph_rgwloadbalancer_firewall_zone: public
