--- a/roles/ceph-handler/tasks/check_running_containers.yml
+++ b/roles/ceph-handler/tasks/check_running_containers.yml
@@ -47,6 +47,14 @@
   check_mode: no
   when: inventory_hostname in groups.get(rbdmirror_group_name, [])
 
+- name: check for a cephfs mirror container
+  command: "{{ container_binary }} ps -q --filter='name=cephfs-mirror-{{ ansible_hostname }}'"
+  register: ceph_cephfs_mirror_container_stat
+  changed_when: false
+  failed_when: false
+  check_mode: no
+  when: inventory_hostname in groups.get(cephfsmirror_group_name, [])
+
 - name: check for a nfs container
   command: "{{ container_binary }} ps -q --filter='name=ceph-nfs-{{ ceph_nfs_service_suffix | default(ansible_hostname) }}'"
   register: ceph_nfs_container_stat
@@ -92,3 +100,4 @@
       or inventory_hostname in groups.get(mds_group_name, [])
       or inventory_hostname in groups.get(rgw_group_name, [])
       or inventory_hostname in groups.get(rbdmirror_group_name, [])
+      or inventory_hostname in groups.get(cephfsmirror_group_name, [])
