--- a/roles/ceph-handler/tasks/main.yml
+++ b/roles/ceph-handler/tasks/main.yml
@@ -33,6 +33,11 @@
     handler_rbd_mirror_status: "{{ 0 in (rbd_mirror_socket.results | map(attribute='rc') | list) if not containerized_deployment | bool else (ceph_rbd_mirror_container_stat.get('rc') == 0 and ceph_rbd_mirror_container_stat.get('stdout_lines', []) | length != 0) }}"
   when: inventory_hostname in groups.get(rbdmirror_group_name, [])
 
+- name: set_fact handler_cephfs_mirror_status
+  set_fact:
+    handler_cephfs_mirror_status: "{{ 0 in (cephfs_mirror_socket.results | map(attribute='rc') | list) if not containerized_deployment | bool else (ceph_fs_mirror_container_stat.get('rc') == 0 and ceph_fs_mirror_container_stat.get('stdout_lines', []) | length != 0) }}"
+  when: inventory_hostname in groups.get(cephfsmirror_group_name, [])
+
 - name: set_fact handler_mgr_status
   set_fact:
     handler_mgr_status: "{{ 0 in (mgr_socket.results | map(attribute='rc') | list) if not containerized_deployment | bool else (ceph_mgr_container_stat.get('rc') == 0 and ceph_mgr_container_stat.get('stdout_lines', []) | length != 0) }}"
@@ -48,6 +53,7 @@
       or inventory_hostname in groups.get(mds_group_name, [])
       or inventory_hostname in groups.get(rgw_group_name, [])
       or inventory_hostname in groups.get(rbdmirror_group_name, [])
+      or inventory_hostname in groups.get(cephfsmirror_group_name, [])
 
 - name: rgw multi-instances related tasks
   when:
