--- a/site-container.yml.sample
+++ b/site-container.yml.sample
@@ -8,6 +8,7 @@
   - rgws
   - nfss
   - rbdmirrors
+  - cephfsmirrors
   - clients
   - iscsigws
   - mgrs
@@ -381,6 +382,42 @@
             status: "Complete"
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
+- hosts: cephfsmirrors
+  become: True
+  gather_facts: false
+  any_errors_fatal: true
+  tasks:
+    - name: set ceph fs mirror install 'In Progress'
+      run_once: true
+      set_stats:
+        data:
+          installer_phase_ceph_fsmirror:
+            status: "In Progress"
+            start: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
+
+    - import_role:
+        name: ceph-defaults
+      tags: ['ceph_update_config']
+    - import_role:
+        name: ceph-facts
+      tags: ['ceph_update_config']
+    - import_role:
+        name: ceph-handler
+      tags: ['ceph_update_config']
+    - import_role:
+        name: ceph-config
+      tags: ['ceph_update_config']
+    - import_role:
+        name: ceph-fs-mirror
+
+    - name: set ceph gs mirror install 'Complete'
+      run_once: true
+      set_stats:
+        data:
+          installer_phase_ceph_fsmirror:
+            status: "Complete"
+            end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
+
 - hosts:
     - iscsigws
   gather_facts: false
@@ -432,6 +469,7 @@
   - mdss
   - rgws
   - rbdmirrors
+  - cephfsmirrors
   - mgrs
 
   gather_facts: false
