--- a/group_vars/osds.yml.sample
+++ b/group_vars/osds.yml.sample
@@ -180,6 +180,9 @@ dummy:
 #ceph_osd_docker_cpuset_cpus: "0,2,4,6,8,10,12,14,16"
 #ceph_osd_docker_cpuset_mems: "0"
 
+# The following variable is undefined, and thus, unused by default.
+#ceph_osd_docker_memory_swappiness: "0"
+
 # PREPARE DEVICE
 #
 # WARNING /!\ DMCRYPT scenario ONLY works with Docker version 1.12.5 and above
