--- a/group_vars/nfss.yml.sample
+++ b/group_vars/nfss.yml.sample
@@ -57,6 +57,11 @@ dummy:
 # when setting 'nfs_file_gw' option as true.
 #ceph_nfs_disable_caching: false
 
+# This is the file ganesha will use to control NFSv4 ID mapping
+#ceph_nfs_idmap_conf: "/etc/ganesha/idmap.conf"
+# ``domain`` setting in the idmap.conf file.  Default is host's DNS domain.
+#ceph_nfs_idmap_domain: ""
+
 ####################
 # FSAL Ceph Config #
 ####################
