--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -14,5 +14,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
+      - run: pip install -r <(grep ansible tests/requirements.txt) ansible-lint==4.3.7
+        if: matrix.python-version == '3.6'
       - run: pip install -r <(grep ansible tests/requirements.txt) ansible-lint
+        if: matrix.python-version == '2.7'
       - run: ansible-lint -x 106,204,205,208 -v --force-color ./roles/*/ ./infrastructure-playbooks/*.yml site-container.yml.sample site-container.yml.sample
