--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -371,7 +371,7 @@ dummy:
 
 ## Rados Gateway options
 #
-#radosgw_frontend_type: beast # For additionnal frontends see: http://docs.ceph.com/docs/nautilus/radosgw/frontends/
+#radosgw_frontend_type: beast # For additional frontends see: https://docs.ceph.com/en/pacific/radosgw/frontends/
 
 #radosgw_civetweb_port: 8080
 #radosgw_civetweb_num_threads: 512
