--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -363,7 +363,7 @@ mds_max_mds: 1
 
 ## Rados Gateway options
 #
-radosgw_frontend_type: beast # For additionnal frontends see: http://docs.ceph.com/docs/nautilus/radosgw/frontends/
+radosgw_frontend_type: beast # For additional frontends see: https://docs.ceph.com/en/octopus/radosgw/frontends/
 
 radosgw_civetweb_port: 8080
 radosgw_civetweb_num_threads: 512
