dashboard: support igw nodes with dedicated subnet
This adds the possibility to deploy the dashboard with igw nodes using
a dedicated subnet.

Closes: https://bugzilla.redhat.com/show_bug.cgi?id=1926170

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>
(cherry picked from commit c33de174f1d8ec2d4b94a4322cdcdcf25262f1f6)

--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -809,6 +809,8 @@ dummy:
 #alertmanager_conf_dir: /etc/alertmanager
 #alertmanager_port: 9093
 #alertmanager_cluster_port: 9094
+# igw
+#igw_network: "{{ public_network }}"
 
 
 ##################################
