tests: disable vars fact injection
wip

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -277,6 +277,7 @@ setenv=
   ANSIBLE_KEEP_REMOTE_FILES = 1
   ANSIBLE_CACHE_PLUGIN = memory
   ANSIBLE_GATHERING = implicit
+  ANSIBLE_INJECT_FACT_VARS = True
   # only available for ansible >= 2.5
   ANSIBLE_STDOUT_CALLBACK = yaml
   non_container: DEV_SETUP = True
