--- a/roles/ceph-validate/tasks/check_system.yml
+++ b/roles/ceph-validate/tasks/check_system.yml
@@ -4,12 +4,12 @@
     msg: "Ansible version must be >= 2.x, please update!"
   when: ansible_version.major|int < 2
 
-- name: fail on unsupported ansible version
-  fail:
-    msg: "Ansible version must be 2.9!"
-  when:
-    - ansible_version.major|int == 2
-    - ansible_version.minor|int != 9
+# - name: fail on unsupported ansible version
+#   fail:
+#     msg: "Ansible version must be 2.9!"
+#   when:
+#     - ansible_version.major|int == 2
+#     - ansible_version.minor|int != 9
 
 - name: fail on unsupported system
   fail:
