--- a/roles/ceph-validate/tasks/main.yml
+++ b/roles/ceph-validate/tasks/main.yml
@@ -19,11 +19,11 @@
 
     - name: validate ceph_repository_community
       fail:
-        msg: "ceph_stable_release must be either 'nautilus' or 'octopus'"
+        msg: "ceph_stable_release must be 'pacific'"
       when:
         - ceph_origin == 'repository'
         - ceph_repository == 'community'
-        - ceph_stable_release not in ['nautilus', 'octopus']
+        - ceph_stable_release not in ['pacific']
 
     - name: validate ceph_repository_type
       fail:
