--- a/roles/ceph-client/tasks/create_users_keys.yml
+++ b/roles/ceph-client/tasks/create_users_keys.yml
@@ -18,6 +18,14 @@
   set_fact:
     admin_key_presence: "{{ True if groups.get(mon_group_name, []) | length > 0 else copy_admin_key }}"
 
+- name: debug1
+  debug:
+    msg: "{{ groups.get('_filtered_clients') }}"
+
+- name: debug2
+  debug:
+    msg: "{{ groups.get('_filtered_clients') | first }}"
+
 - name: create cephx key(s)
   ceph_key:
     name: "{{ item.name }}"
