mds: add filter | int on condition
This seems to break the update scenario CI testing in stable-3.2.

Typical error:
```
The conditional check 'mds_max_mds > 1' failed. The error was: Unexpected templating type error occurred on ({% if mds_max_mds > 1 %} True {% else %} False {% endif %}): '>' not supported between instances of 'str' and 'int'
```

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/roles/ceph-mds/tasks/create_mds_filesystems.yml
+++ b/roles/ceph-mds/tasks/create_mds_filesystems.yml
@@ -44,4 +44,4 @@
   delegate_to: "{{ groups[mon_group_name][0] }}"
   when:
     - ceph_release_num[ceph_release] >= ceph_release_num.jewel
-    - mds_max_mds > 1
+    - mds_max_mds | int > 1
