--- a/group_vars/rhcs.yml.sample
+++ b/group_vars/rhcs.yml.sample
@@ -756,6 +756,8 @@ ceph_docker_registry_auth: true
 #dashboard_rgw_api_no_ssl_verify: False
 #dashboard_frontend_vip: ''
 node_exporter_container_image: registry.redhat.io/openshift4/ose-prometheus-node-exporter:v4.6
+#prometheus_frontend_vip: ''
+#alertmanager_frontend_vip: ''
 #node_exporter_port: 9100
 #grafana_admin_user: admin
 # This variable must be set with a strong custom password when dashboard_enabled is True
