--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -748,6 +748,8 @@ dashboard_rgw_api_admin_resource: ''
 dashboard_rgw_api_no_ssl_verify: False
 dashboard_frontend_vip: ''
 node_exporter_container_image: "prom/node-exporter:v0.17.0"
+prometheus_frontend_vip: ''
+alertmanager_frontend_vip: ''
 node_exporter_port: 9100
 grafana_admin_user: admin
 # This variable must be set with a strong custom password when dashboard_enabled is True
