docker2podman: add documentation/header
this adds a small documentation in the header of the playbook in order
to explain what is the goal of this playbook.

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>
(cherry picked from commit 36b4227dcd79c2525102f8c3102771cfab7fe693)

--- a/infrastructure-playbooks/docker-to-podman.yml
+++ b/infrastructure-playbooks/docker-to-podman.yml
@@ -1,6 +1,9 @@
+---
 # This playbook  *doesn't* add podman support in stable-3.2 at all.
 # This is a tripleO dedicated playbook which is intended to be run
 # early during FFU workflow in order to prepare the OS upgrade.
+# It is *not* intended to restart services since we don't want multiple services
+# restarts.
 
 - hosts:
   - mons
