core: bump ansible version
We should consider bumping ansible version for future releases, so let's
start testing against ansible 2.10

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>
(cherry picked from commit 839fac8f9418ce54af66a4ff0a3a9b8db6814f26)

--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -2,10 +2,11 @@
 testinfra>=3,<4
 pytest-xdist==1.28.0
 pytest>=4.6,<5.0
-ansible>=2.9,<2.10,!=2.9.10
+ansible>=3,<4
 Jinja2>=2.10
 netaddr
 mock
 jmespath
 pytest-rerunfailures<9.0
 pytest-cov
+six
