--- a/tox-subset_update.ini
+++ b/tox-subset_update.ini
@@ -32,7 +32,6 @@ setenv=
   UPDATE_CEPH_DEV_BRANCH = master
   UPDATE_CEPH_DEV_SHA1 = latest
   ROLLING_UPDATE = True
-deps= -r{toxinidir}/tests/requirements.txt
 changedir={toxinidir}/tests/functional/subset_update{env:CONTAINER_DIR:}
 commands=
   bash {toxinidir}/tests/scripts/vagrant_up.sh --no-provision {posargs:--provider=virtualbox}
@@ -55,6 +54,7 @@ commands=
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
   "'
 
+  pip install -r {toxinidir}/tests/requirements.txt
 # upgrade mons
 # mon1
   ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/rolling_update.yml --limit mon1 --tags=mons --extra-vars "\
