--- a/tox-update.ini
+++ b/tox-update.ini
@@ -31,7 +31,6 @@ setenv=
   CEPH_DOCKER_IMAGE_TAG = latest-octopus
   UPDATE_CEPH_DOCKER_IMAGE_TAG = latest-pacific
   ROLLING_UPDATE = True
-deps= -r{toxinidir}/tests/requirements.txt
 changedir={toxinidir}/tests/functional/all_daemons{env:CONTAINER_DIR:}
 commands=
   bash {toxinidir}/tests/scripts/vagrant_up.sh --no-provision {posargs:--provider=virtualbox}
@@ -62,7 +61,7 @@ commands=
       ceph_nfs_rgw_access_key=fake_access_key \
       ceph_nfs_rgw_secret_key=fake_secret_key \
   "'
-
+  pip install -r {toxinidir}/tests/requirements.txt
   ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/rolling_update.yml --extra-vars "\
       ireallymeanit=yes \
       ceph_docker_registry_auth=True \
