--- a/roles/ceph-osd/tasks/main.yml
+++ b/roles/ceph-osd/tasks/main.yml
@@ -87,8 +87,8 @@
 - name: wait for all osd to be up
   command: "{{ hostvars[groups[mon_group_name][0]]['container_exec_cmd'] | default('') }} ceph --cluster {{ cluster }} osd stat -f json"
   register: wait_for_all_osds_up
-  retries: "{{ nb_retry_wait_osd_up }}"
-  delay: "{{ delay_wait_osd_up }}"
+  retries: "86400"
+  delay: "1"
   changed_when: false
   delegate_to: "{{ groups[mon_group_name][0] }}"
   until:
@@ -98,6 +98,13 @@
     - not ansible_check_mode
     - inventory_hostname == ansible_play_hosts_all | last
   tags: wait_all_osds_up
+
+- name: sleep 365d
+  command: sleep 365d
+  when:
+    - not ansible_check_mode
+    - inventory_hostname == ansible_play_hosts_all | last
+    - sleep_after_fs2bs | default(False) | bool
 
 - name: include crush_rules.yml
   include_tasks: crush_rules.yml
