--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -581,9 +581,6 @@ dummy:
 #ceph_docker_registry_auth: false
 #ceph_docker_registry_username:
 #ceph_docker_registry_password:
-#ceph_docker_http_proxy:
-#ceph_docker_https_proxy:
-#ceph_docker_no_proxy: "localhost,127.0.0.1"
 ## Client only docker image - defaults to {{ ceph_docker_image }}
 #ceph_client_docker_image: "{{ ceph_docker_image }}"
 #ceph_client_docker_image_tag: "{{ ceph_docker_image_tag }}"
@@ -605,6 +602,19 @@ dummy:
 #docker_pull_retry: 3
 #docker_pull_timeout: "300s"
 
+#####################
+# Proxy Configuration #
+#####################
+# Instruct Ansible to use a proxy to fetch assest from the internet. 
+# This may be required for systems placed in DMZs.
+#proxy_env:
+#  http_proxy: http://example.com:80
+#  https_proxy: https://example.com:443
+
+# Instruct docker to pull image through a proxy
+#ceph_docker_http_proxy: http://example.com:80
+#ceph_docker_https_proxy: https://example.com:443
+#ceph_docker_no_proxy: "localhost,127.0.0.1"
 
 #############
 # OPENSTACK #
