add proxy support for fetching remote assets

--- a/roles/ceph-grafana/tasks/configure_grafana.yml
+++ b/roles/ceph-grafana/tasks/configure_grafana.yml
@@ -42,6 +42,7 @@
   when:
     - not containerized_deployment | bool
     - not ansible_facts['os_family'] in ['RedHat', 'Suse']
+  environment: "{{ proxy_env | default('') }}"
 
 - name: write grafana.ini
   template:
