--- a/roles/ceph-nfs/tasks/pre_requisite_non_container.yml
+++ b/roles/ceph-nfs/tasks/pre_requisite_non_container.yml
@@ -74,7 +74,8 @@
       when:
         - cephx | bool
         - item.item.copy_key | bool
-
+      no_log: true
+    
     - name: nfs object gateway related tasks
       when: nfs_obj_gw | bool
       block:
