--- a/infrastructure-playbooks/rolling_update.yml
+++ b/infrastructure-playbooks/rolling_update.yml
@@ -143,6 +143,7 @@
   hosts: "{{ mon_group_name|default('mons') }}"
   serial: 1
   become: True
+  gather_facts: false
   tasks:
     - name: upgrade ceph mon cluster
       block:
@@ -305,6 +306,7 @@
 - name: reset mon_host
   hosts: "{{ mon_group_name|default('mons') }}"
   become: True
+  gather_facts: false
   tasks:
     - import_role:
         name: ceph-defaults
@@ -322,6 +324,7 @@
   hosts: "{{ mon_group_name|default('mons') }}"
   serial: 1
   become: True
+  gather_facts: false
   tasks:
     - name: upgrade mgrs when no mgr group explicitly defined in inventory
       when: groups.get(mgr_group_name, []) | length == 0
@@ -356,6 +359,7 @@
   hosts: "{{ mgr_group_name|default('mgrs') }}"
   serial: 1
   become: True
+  gather_facts: false
   tasks:
     # The following task has a failed_when: false
     # to handle the scenario where no mgr existed before the upgrade
@@ -389,6 +393,7 @@
 - name: set osd flags
   hosts: "{{ mon_group_name | default('mons') }}[0]"
   become: True
+  gather_facts: false
   tasks:
     - import_role:
         name: ceph-defaults
@@ -416,6 +421,7 @@
   hosts: "{{ osd_group_name|default('osds') }}"
   serial: 1
   become: True
+  gather_facts: false
   tasks:
     - import_role:
         name: ceph-defaults
@@ -489,6 +495,7 @@
 - name: complete osd upgrade
   hosts: "{{ mon_group_name|default('mons') }}[0]"
   become: True
+  gather_facts: false
   tasks:
     - import_role:
         name: ceph-defaults
@@ -511,6 +518,7 @@
 - name: upgrade ceph mdss cluster, deactivate all rank > 0
   hosts: "{{ mon_group_name | default('mons') }}[0]"
   become: true
+  gather_facts: false
   tasks:
     - name: deactivate all mds rank > 0
       when: groups.get(mds_group_name, []) | length > 0
@@ -611,6 +619,7 @@
     upgrade_ceph_packages: True
   hosts: active_mdss
   become: true
+  gather_facts: false
   tasks:
     - import_role:
         name: ceph-defaults
@@ -656,6 +665,7 @@
     upgrade_ceph_packages: True
   hosts: standby_mdss
   become: True
+  gather_facts: false
 
   tasks:
     - import_role:
@@ -704,6 +714,7 @@
   hosts: "{{ rgw_group_name|default('rgws') }}"
   serial: 1
   become: True
+  gather_facts: false
   tasks:
 
     - import_role:
@@ -747,6 +758,7 @@
   hosts: "{{ rbdmirror_group_name|default('rbdmirrors') }}"
   serial: 1
   become: True
+  gather_facts: false
   tasks:
     - name: stop ceph rbd mirror
       systemd:
@@ -779,6 +791,7 @@
   hosts: "{{ nfs_group_name|default('nfss') }}"
   serial: 1
   become: True
+  gather_facts: false
   tasks:
     # failed_when: false is here so that if we upgrade
     # from a version of ceph that does not have nfs-ganesha
@@ -828,6 +841,7 @@
     - "{{ iscsi_gw_group_name|default('iscsigws') }}"
   serial: 1
   become: True
+  gather_facts: false
   tasks:
     # failed_when: false is here so that if we upgrade
     # from a version of ceph that does not have iscsi gws
@@ -868,6 +882,7 @@
   hosts: "{{ client_group_name|default('clients') }}"
   serial: "{{ client_update_batch | default(20) }}"
   become: True
+  gather_facts: false
   tasks:
     - import_role:
         name: ceph-defaults
@@ -924,6 +939,7 @@
 - name: complete upgrade
   hosts: "{{ mon_group_name | default('mons') }}"
   become: True
+  gather_facts: false
   tasks:
     - import_role:
         name: ceph-defaults
@@ -1039,6 +1055,7 @@
 - name: show ceph status
   hosts: "{{ mon_group_name|default('mons') }}"
   become: True
+  gather_facts: false
   tasks:
     - import_role:
         name: ceph-defaults
