update: do not gather facts on each play
There's no benefit to gather facts again on each play in
rolling_update.yml

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>
(cherry picked from commit 2c77d0094c9bab02dee32a144faf5168262049df)

--- a/infrastructure-playbooks/rolling_update.yml
+++ b/infrastructure-playbooks/rolling_update.yml
@@ -117,6 +117,7 @@
   hosts: "{{ mon_group_name|default('mons') }}"
   serial: 1
   become: True
+  gather_facts: false
   tasks:
     - name: upgrade ceph mon cluster
       block:
@@ -287,6 +288,7 @@
 - name: reset mon_host
   hosts: "{{ mon_group_name|default('mons') }}"
   become: True
+  gather_facts: false
   tasks:
     - import_role:
         name: ceph-defaults
@@ -304,6 +306,7 @@
   hosts: "{{ mon_group_name|default('mons') }}"
   serial: 1
   become: True
+  gather_facts: false
   tasks:
     - name: upgrade mgrs when no mgr group explicitly defined in inventory
       when: groups.get(mgr_group_name, []) | length == 0
@@ -338,6 +341,7 @@
   hosts: "{{ mgr_group_name|default('mgrs') }}"
   serial: 1
   become: True
+  gather_facts: false
   tasks:
     # The following task has a failed_when: false
     # to handle the scenario where no mgr existed before the upgrade
@@ -371,6 +375,7 @@
 - name: set osd flags
   hosts: "{{ mon_group_name | default('mons') }}[0]"
   become: True
+  gather_facts: false
   tasks:
     - import_role:
         name: ceph-defaults
@@ -398,6 +403,7 @@
   hosts: "{{ osd_group_name|default('osds') }}"
   serial: 1
   become: True
+  gather_facts: false
   tasks:
     - name: get osd numbers - non container
       shell: if [ -d /var/lib/ceph/osd ] ; then ls /var/lib/ceph/osd | sed 's/.*-//' ; fi  # noqa 306
@@ -476,7 +482,7 @@
 - name: complete osd upgrade
   hosts: "{{ mon_group_name|default('mons') }}[0]"
   become: True
-
+  gather_facts: false
   tasks:
     - import_role:
         name: ceph-defaults
@@ -522,6 +528,7 @@
 - name: upgrade ceph mdss cluster, deactivate all rank > 0
   hosts: "{{ mon_group_name | default('mons') }}[0]"
   become: true
+  gather_facts: false
   tasks:
     - name: deactivate all mds rank > 0
       when: groups.get(mds_group_name, []) | length > 0
@@ -610,6 +617,7 @@
     upgrade_ceph_packages: True
   hosts: active_mdss
   become: true
+  gather_facts: false
   tasks:
     - import_role:
         name: ceph-defaults
@@ -655,6 +663,7 @@
     upgrade_ceph_packages: True
   hosts: standby_mdss
   become: True
+  gather_facts: false
 
   tasks:
     - import_role:
@@ -696,6 +705,7 @@
   hosts: "{{ rgw_group_name|default('rgws') }}"
   serial: 1
   become: True
+  gather_facts: false
   tasks:
 
     - import_role:
@@ -739,6 +749,7 @@
   hosts: "{{ rbdmirror_group_name|default('rbdmirrors') }}"
   serial: 1
   become: True
+  gather_facts: false
   tasks:
     - name: stop ceph rbd mirror
       systemd:
@@ -771,6 +782,7 @@
   hosts: "{{ nfs_group_name|default('nfss') }}"
   serial: 1
   become: True
+  gather_facts: false
   tasks:
     # failed_when: false is here so that if we upgrade
     # from a version of ceph that does not have nfs-ganesha
@@ -820,6 +832,7 @@
     - "{{ iscsi_gw_group_name|default('iscsigws') }}"
   serial: 1
   become: True
+  gather_facts: false
   tasks:
     # failed_when: false is here so that if we upgrade
     # from a version of ceph that does not have iscsi gws
@@ -860,6 +873,7 @@
   hosts: "{{ client_group_name|default('clients') }}"
   serial: "{{ client_update_batch | default(20) }}"
   become: True
+  gather_facts: false
   tasks:
     - import_role:
         name: ceph-defaults
@@ -931,6 +945,7 @@
   - "{{ client_group_name | default('clients') }}"
   - "{{ iscsi_gw_group_name | default('iscsigws') }}"
   become: True
+  gather_facts: false
   tasks:
     - import_role:
         name: ceph-defaults
@@ -1069,6 +1084,7 @@
 - name: show ceph status
   hosts: "{{ mon_group_name|default('mons') }}"
   become: True
+  gather_facts: false
   tasks:
     - import_role:
         name: ceph-defaults
