--- a/roles/ceph-iscsi-gw/tasks/common.yml
+++ b/roles/ceph-iscsi-gw/tasks/common.yml
@@ -21,6 +21,7 @@
   when:
     - cephx | bool
     - item.item.copy_key | bool
+  no_log: true
 
 - name: add mgr ip address to trusted list with dashboard - ipv4
   set_fact:
