dashboard: rename grafana_addr* variables
for consistency concern. Since we renamed the "grafana-server" group to
"monitoring" it makes sense to rename those variables accordingly.

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/dashboard.yml
+++ b/dashboard.yml
@@ -68,7 +68,7 @@
       tags: ['ceph_update_config']
     - import_role:
         name: ceph-facts
-        tasks_from: grafana
+        tasks_from: monitoring.yml
       tags: ['ceph_update_config']
     - import_role:
         name: ceph-prometheus
@@ -107,7 +107,7 @@
       tags: ['ceph_update_config']
     - import_role:
         name: ceph-facts
-        tasks_from: grafana
+        tasks_from: monitoring.yml
       tags: ['ceph_update_config']
     - import_role:
         name: ceph-dashboard
