--- a/infrastructure-playbooks/docker-to-podman.yml
+++ b/infrastructure-playbooks/docker-to-podman.yml
@@ -199,7 +199,7 @@
 
         - import_role:
             name: ceph-facts
-            tasks_from: grafana.yml
+            tasks_from: monitoring.yml
           when: inventory_hostname in groups.get(monitoring_group_name, [])
 
         - import_role:
