--- a/infrastructure-playbooks/rolling_update.yml
+++ b/infrastructure-playbooks/rolling_update.yml
@@ -994,7 +994,7 @@
             name: ceph-facts
         - import_role:
             name: ceph-facts
-            tasks_from: grafana
+            tasks_from: monitoring.yml
         - import_role:
             name: ceph-prometheus
         - import_role:
@@ -1015,7 +1015,7 @@
             name: ceph-facts
         - import_role:
             name: ceph-facts
-            tasks_from: grafana
+            tasks_from: monitoring.yml
         - import_role:
             name: ceph-dashboard
 
