--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -668,7 +668,7 @@ grafana_admin_user: admin
 grafana_crt: ''
 grafana_key: ''
 # When using https, please fill with a hostname for which grafana_crt is valid.
-grafana_server_fqdn: ''
+monitoring_server_fqdn: "{{ grafana_server_fqdn if grafana_server_fqdn is defined and grafana_server_fqdn != '' else '' }}"
 grafana_container_image: "docker.io/grafana/grafana:6.7.4"
 grafana_container_cpu_period: 100000
 grafana_container_cpu_cores: 2
