--- a/group_vars/rhcs.yml.sample
+++ b/group_vars/rhcs.yml.sample
@@ -676,7 +676,7 @@ node_exporter_container_image: registry.redhat.io/openshift4/ose-prometheus-node
 #grafana_crt: ''
 #grafana_key: ''
 # When using https, please fill with a hostname for which grafana_crt is valid.
-#grafana_server_fqdn: ''
+#monitoring_server_fqdn: "{{ grafana_server_fqdn if grafana_server_fqdn is defined and grafana_server_fqdn != '' else '' }}"
 grafana_container_image: registry.redhat.io/rhceph/rhceph-5-dashboard-rhel8:5
 #grafana_container_cpu_period: 100000
 #grafana_container_cpu_cores: 2
