--- a/roles/ceph-dashboard/tasks/configure_dashboard.yml
+++ b/roles/ceph-dashboard/tasks/configure_dashboard.yml
@@ -171,43 +171,34 @@
     - dashboard_protocol == "https"
     - dashboard_grafana_api_no_ssl_verify | bool
 
-- name: set alertmanager host
-  command: "{{ container_exec_cmd }} ceph --cluster {{ cluster }} dashboard set-alertmanager-api-host http://{{ monitoring_server_addrs | first }}:{{ alertmanager_port }}"
-  delegate_to: "{{ groups[mon_group_name][0] }}"
-  run_once: true
-  changed_when: false
-
-- name: set prometheus host
-  command: "{{ container_exec_cmd }} ceph --cluster {{ cluster }} dashboard set-prometheus-api-host http://{{ monitoring_server_addrs | first }}:{{ prometheus_port }}"
-  delegate_to: "{{ groups[mon_group_name][0] }}"
-  run_once: true
-  changed_when: false
-
 - include_tasks: configure_grafana_layouts.yml
   with_items: '{{ monitoring_server_addrs }}'
   vars:
     monitoring_server_addr: '{{ item }}'
 
-- name: config monitoring api url vip
+- name: set_fact prometheus_api_host, alertmanager_api_host, grafana_api_url
+  set_fact:
+    prometheus_api_host: "http://{{ prometheus_frontend_vip if prometheus_frontend_vip != '' else monitoring_server_addrs | first }}:{{ prometheus_port }}"
+    alertmanager_api_host: "http://{{ alertmanager_frontend_vip if alertmanager_frontend_vip != '' else monitoring_server_addrs | first }}:{{ alertmanager_port }}"
+    grafana_api_url: "{{ dashboard_protocol }}://{{ dashboard_frontend_vip if dashboard_frontend_vip != '' else monitoring_server_fqdn | default(monitoring_server_addrs | last) }}:{{ grafana_port }}"
+
+- name: config monitoring api urls
   run_once: true
   block:
-    - name: config grafana api url vip
-      command: "{{ container_exec_cmd }} ceph --cluster {{ cluster }} dashboard set-grafana-api-url {{ dashboard_protocol }}://{{ dashboard_frontend_vip }}:{{ grafana_port }}"
+    - name: config grafana api url
+      command: "{{ container_exec_cmd }} ceph --cluster {{ cluster }} dashboard set-grafana-api-url {{ grafana_api_url }}"
       delegate_to: "{{ groups[mon_group_name][0] }}"
       changed_when: false
-      when: dashboard_frontend_vip is defined and dashboard_frontend_vip | length > 0
 
     - name: config alertmanager api url
-      command: "{{ container_exec_cmd }} ceph --cluster {{ cluster }} dashboard set-alertmanager-api-host {{ dashboard_protocol }}://{{ alertmanager_frontend_vip }}:{{ alertmanager_port }}"
+      command: "{{ container_exec_cmd }} ceph --cluster {{ cluster }} dashboard set-alertmanager-api-host {{ alertmanager_api_host }}"
       delegate_to: "{{ groups[mon_group_name][0] }}"
       changed_when: false
-      when: alertmanager_frontend_vip is defined and alertmanager_frontend_vip | length > 0
 
     - name: config prometheus api url
-      command: "{{ container_exec_cmd }} ceph --cluster {{ cluster }} dashboard set-prometheus-api-host {{ dashboard_protocol }}://{{ prometheus_frontend_vip }}:{{ prometheus_port }}"
+      command: "{{ container_exec_cmd }} ceph --cluster {{ cluster }} dashboard set-prometheus-api-host {{ prometheus_api_host }}"
       delegate_to: "{{ groups[mon_group_name][0] }}"
       changed_when: false
-      when: prometheus_frontend_vip is defined and prometheus_frontend_vip | length > 0
 
 - name: dashboard object gateway management frontend
   when: groups.get(rgw_group_name, []) | length > 0
